# Cpp_Python_Project

./: CMakeLists.txt  README.md  makeCMake.sh  setup.py
C++_Code/Bindings/: Numerical_Integration_py.cpp  Statistics_py.cpp
C++_Code/Includes/Integration/: Functions.hpp  Numerical_Integration.hpp
C++_Code/Includes/Statistics/: Data.hpp  Data_Handling.hpp  Iterators.hpp  Test_QoL.hpp
C++_Code/Sources/Integration/: Numerical_Integration.cpp
C++_Code/Sources/Statistics/: Data_Handling.cpp  Statistics.cpp
Python_Code/integration_py/: __init__.py  py_integration.py
Python_Code/statistics_py/: __init__.py  py_statistical_analysis.py
Tests/C++_Tests/: Integration_main.cpp  Project_main.cpp  Statistics_main.cpp
Tests/Python_Tests/: integration_test.py  statistics_test.py
Tests/Python_Tests/profiling/: integration_profile.py  statistics_profile.py
